# PublicStudy

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  DOCUMENT_CLEANUP_ANALYSIS.md  Directory.Build.props  NetworkModuleTest.sln  README.md  _build_run.ps1  build_database_module.bat  check_logs.ps1  db_tasks.wal  kill_test_procs.ps1  run_allServer.bat  run_allServer.ps1  run_client.bat  run_client.ps1  run_dbServer.bat  run_dbServer.ps1  run_server.bat  run_server.ps1  run_test_2clients.ps1  run_test_auto.ps1
CustomCrossPlatformServer/: CMakeLists.txt  DESIGN.md
CustomCrossPlatformServer/include/net/: connection.hpp  event.hpp  transport.hpp
NetworkModuleTest/: .gitignore  AGENTS.md  BUILD_CHECKLIST.md  BUILD_READY.md  CMakeLists.txt  DOCUMENT_ANALYSIS.md  DOCUMENT_CLEANUP_ANALYSIS.md  Database_Module_Enhancement_Summary.md  Directory.Build.props  Dockerfile  FINAL_BUILD_FIXES.md  FINAL_CHANGES_SUMMARY.md  FIX_SUMMARY.md  LICENSE  NetworkModuleTest.sln  README.md  REFACTORING_CLASS_SEPARATION.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  SimpleTest.cpp  _build_run.ps1  build_all.ps1  build_common.ps1  build_database_module.bat  build_serverengine.ps1  build_testserver.ps1  check_and_fix_endings.ps1  check_logs.ps1  docker-compose.yml  fix_execqueue.ps1  fix_line_endings.ps1  kill_test_procs.ps1  run_allServer.bat  run_allServer.ps1  run_all_servers.bat  run_client.bat  run_client.ps1  run_crash_repro.ps1  run_dbServer.bat  run_dbServer.ps1  (+10 more)
NetworkModuleTest/.claude/: settings.local.json
NetworkModuleTest/Client/TestClient/: CMakeLists.txt  TestClient.vcxproj  TestClient.vcxproj.filters  main.cpp
NetworkModuleTest/DBModuleTest/: DocDBModule.sln
NetworkModuleTest/DBModuleTest/DocDBModule/: README.md  README_SHORT.md  build.bat
NetworkModuleTest/DBModuleTest/include/: IDatabase.h
NetworkModuleTest/DBModuleTest/samples/: odbc_sample.cpp
NetworkModuleTest/DBModuleTest/tests/: test_database.cpp
NetworkModuleTest/Doc/: 01_ProjectOverview.md  02_Architecture.md  03_ConcurrencyRuntime.md  03_Implementation_Roadmap.md  03_Protocol.md  04_API.md  05_DevelopmentGuide.md  05_RIO_IO_URING_Migration_Plan.md  06_Cross_Platform_Architecture.md  06_SolutionGuide.md  07_API_Design_Document.md  07_VisualMap.md  08_Performance_Benchmarking_Guide.md  10_Document_Integrity_Review.md  11_Architecture_Decision_Session_Naming.md  12_Document_Enhancement_Execution_Plan.md  14_CMake_Build_Configuration.md  15_Memory_Leak_Prevention.md  16_Fallback_Mechanisms.md  API.md  Architecture.md  COMPREHENSIVE_REVIEW_2026-01-27.md  Development.md  DevelopmentGuide.md  PHASE2_COMPLETION_SUMMARY.md  ProjectOverview.md  Protocol.md  README.md  SolutionGuide.md
NetworkModuleTest/Doc/Architecture/: AsyncDB.md  CrossPlatform.md  MultiplatformEngine.md  NetworkArchitecture.md  PLATFORM_STRUCTURE_ANALYSIS.md  ServerMigration.md
NetworkModuleTest/Doc/Database/: 2026-03-20_SQL_Script_Bootstrap_Smoke_Report.md  README.md
NetworkModuleTest/Doc/Development/: NamingConventions.md
NetworkModuleTest/Doc/Network/: CodingConventions.md  IOCPAnalysis.md
NetworkModuleTest/Doc/Performance/: Benchmarking.md  LockContentionAnalysis.md  PerformanceTestGuideline.md  ServerEngineNetworkLoadTestChecklist.md  VALUE_COPY_OPTIMIZATION.md
NetworkModuleTest/Doc/Reports/: Lock_Sync_Async_Mechanisms.docx  Network_Async_DB_Report - 복사본.docx  Network_Async_DB_Report.docx  Network_Async_DB_Report.md  Network_Async_DB_Report_2026-02-26.docx  Network_Async_DB_Report_2026-02-26.md  bootstrap.py  run_gen.ps1  ~$twork_Async_DB_Report_2026-02-26.md
NetworkModuleTest/Doc/Wiki/: 01-Overall-Architecture.md  02-Network-Engine.md  03-Session-Layer.md  04-Concurrency.md  05-Database.md  06-Buffer-Memory.md  07-Shutdown-Reconnect.md  _Sidebar.md
NetworkModuleTest/Doc/plans/: 2026-02-25-async-io-extensions-design.md  2026-02-25-async-io-extensions-impl.md  2026-03-01-memory-module-strategy.md  2026-03-04-apply-efficient-branch.md  2026-03-06-macos-accept-eagain-fix.md
NetworkModuleTest/DocNetworkModuleTest/: 01_IOCP_Architecture_Analysis.md  02_Coding_Conventions_Guide.md  03_Implementation_Roadmap.md  05_RIO_IO_URING_Migration_Plan.md  09_PHASE3_COMPLETION_SUMMARY.md
NetworkModuleTest/Docs/: 01_ProjectOverview.md  02_Architecture.md  03_Protocol.md  04_API.md  05_DevelopmentGuide.md  06_SolutionGuide.md  07_VisualMap.md  08_Protocol.md  README.md
NetworkModuleTest/Docs/Architecture/: AsyncDB.md  CrossPlatform.md  MultiplatformEngine.md  NetworkArchitecture.md  PlatformStructureAnalysis.md  ServerMigration.md
NetworkModuleTest/Docs/Database/: MigrationGuide.md  README.md
NetworkModuleTest/Docs/Development/: CMakeBuild.md  FilterReorganization.md  NamingConventions.md  UnitTesting.md
NetworkModuleTest/Docs/Network/: APIDesign.md  CodingConventions.md
NetworkModuleTest/Docs/Performance/: Benchmarking.md  PerformanceTestGuideline.md  PlatformPerfPlan.md  ServerEngineNetworkLoadTestLogTemplate.md  ValueCopyOptimization.md
NetworkModuleTest/Docs/Reports/: README.md
NetworkModuleTest/Docs/Wiki/: 01-Overall-Architecture.md  02-Network-Engine.md  03-Session-Layer.md  04-Concurrency.md  05-Database.md  06-Buffer-Memory.md  07-Shutdown-Reconnect.md  08-Build-and-Run.md  Home.md
NetworkModuleTest/ModuleTest/DBModuleTest/: CMakeLists.txt  ConnectionPool.cpp  ConnectionPool.h  (+13 more)
NetworkModuleTest/NetworkModuleTest/: AsyncIOProvider.cpp  AsyncIOProvider.h  AsyncIOTest.cpp  CMakeLists.txt  EpollAsyncIOProvider.cpp  EpollAsyncIOProvider.h  IOUringAsyncIOProvider.cpp  IOUringAsyncIOProvider.h  IocpAsyncIOProvider.cpp  IocpAsyncIOProvider.h  KqueueAsyncIOProvider.cpp  KqueueAsyncIOProvider.h  NetworkModuleTest.vcxproj  PlatformDetect.cpp  PlatformDetect.h  RIOAsyncIOProvider.cpp  RIOAsyncIOProvider.h  app.manifest
NetworkModuleTest/build-wsl/: CMakeCache.txt  Makefile  cmake_install.cmake
NetworkModuleTest/scripts/: build_unix.sh  build_windows.bat  build_windows.ps1  fix_docx_dbserver.ps1  verify_macos.sh
NetworkModuleTest/test_linux/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  run_docker_test.ps1
(+987 files in other folders)
